# OOP-3

./: Array.cpp  Array.h  CMakeLists.txt  Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Rombus.cpp  Rombus.h  Trapezoid.cpp  Trapezoid.h  main.cpp  tests.cpp
